--- a/_public/style.css
+++ b/_public/style.css
@@ -12,15 +12,6 @@ header {
     text-align: center;
 }
 
-nav .menu-link {
-    color: #3c7bc4;
-    font-weight: bold;
-}
-
-nav .menu-link:hover {
-    text-decoration: underline;
-}
-
 nav {
     background-color: #0d1117;
     padding: 5px;
@@ -31,7 +22,6 @@ nav {
 
 nav ul {
     list-style-type: none;
-    margin: 10;
     padding: 0;
 }
 
@@ -43,6 +33,16 @@ nav li {
 nav a {
     text-decoration: none;
     color: #c9d1d9;
+}
+
+nav .menu-link {
+    color: #3c7bc4;
+    font-weight: bold;
+}
+
+nav .menu-link:hover {
+    text-decoration: underline;
+    opacity: 0.7;
 }
 
 section,
